RESOLVED FIXED40260
[Qt] EditorQt.cpp has coding-style errors
https://bugs.webkit.org/show_bug.cgi?id=40260
Summary [Qt] EditorQt.cpp has coding-style errors
Anders Bakken
Reported 2010-06-07 13:05:42 PDT
[Qt] EditorQt.cpp has coding-style errors
Attachments
Patch (1.06 KB, patch)
2010-06-07 13:06 PDT, Anders Bakken
levin: review-
Fixing previous patch submitted by Anders Bakken to fix the coding-style on EditorQt.cpp (1.01 KB, patch)
2011-04-05 07:45 PDT, Rafael Brandao
no flags
Anders Bakken
Comment 1 2010-06-07 13:06:05 PDT
David Levin
Comment 2 2010-06-09 09:14:52 PDT
Comment on attachment 58078 [details] Patch >+ No new tests. (OOPS!) :(
Jędrzej Nowacki
Comment 3 2010-06-15 01:28:34 PDT
(In reply to comment #2) > (From update of attachment 58078 [details]) > >+ No new tests. (OOPS!) > :( I don't think that you can test it :-) this is a coding style fix.
Jędrzej Nowacki
Comment 4 2010-06-15 04:15:32 PDT
I don't like it, it destroys history of changes. I think it is not in the we work with webkit, general policy is that code shouldn't be changed only for a style reason.
Rafael Brandao
Comment 5 2011-04-05 07:45:02 PDT
Created attachment 88232 [details] Fixing previous patch submitted by Anders Bakken to fix the coding-style on EditorQt.cpp
Laszlo Gombos
Comment 6 2011-04-05 07:48:44 PDT
Comment on attachment 88232 [details] Fixing previous patch submitted by Anders Bakken to fix the coding-style on EditorQt.cpp r=me.
WebKit Commit Bot
Comment 7 2011-04-05 09:19:01 PDT
Comment on attachment 88232 [details] Fixing previous patch submitted by Anders Bakken to fix the coding-style on EditorQt.cpp Clearing flags on attachment: 88232 Committed r82944: <http://trac.webkit.org/changeset/82944>
WebKit Commit Bot
Comment 8 2011-04-05 09:19:07 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.