2011-04-05  Anders Bakken  <agbakken@gmail.com>

Reviewed by Laszlo Gombos.

        [Qt] EditorQt.cpp has coding-style errors
        https://bugs.webkit.org/show_bug.cgi?id=40260

        This patch does not require new test cases.

        * editing/qt/EditorQt.cpp:

Canonical link: https://commits.webkit.org/72728@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@82944 268f45cc-cd09-0410-ab3c-d52691b4dbfc